# personalift-prototype

./: .env.example  .gitignore  GOOGLE_DOC_EXPLANATION.md  README.md  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/demo-landing/: route.ts
components/: personalization-studio.tsx
components/green-ops/: command-center-v2.tsx  (+1 more)
fresh_traffic_multimodal_research/: .gitignore  DATASETS.md  KAGGLE_WORKFLOW.md  README.md  pyproject.toml  requirements.txt
fresh_traffic_multimodal_research/artifacts/: dataset_inventory.json  reasoner_training_plan.json
fresh_traffic_multimodal_research/configs/: datasets.yaml  experiment.yaml  yolo_data_india.yaml  yolo_data_kaggle.yaml
fresh_traffic_multimodal_research/paper/: ieee_paper.tex  paper_assets.json  project_report.tex
fresh_traffic_multimodal_research/scripts/: build_reasoning_dataset.py  evaluate_system.py  export_paper_assets.py  prepare_real_dataset.py  train_reasoner.py  train_yolo.py
fresh_traffic_multimodal_research/src/multimodal_traffic/: __init__.py
fresh_traffic_multimodal_research/src/multimodal_traffic/data/: __init__.py  catalog.py  scene_text.py  schemas.py
fresh_traffic_multimodal_research/src/multimodal_traffic/evaluation/: metrics.py
fresh_traffic_multimodal_research/src/multimodal_traffic/models/: __init__.py  policy.py  reasoning.py
fresh_traffic_multimodal_research/src/multimodal_traffic/pipelines/: build_reasoning_dataset.py
hooks/: use-chaos-engine.ts
lib/: green-ops-data.ts  meme-data.ts
store/: chaos-store.ts
(+22 files in other folders)
